set(SPDIR ./)
set(LIBDIR ${SPDIR}/libs)

set(SLDIR ${SPDIR}/spreadlib)
set(UDIR ${SPDIR}/unpack)
set(TDIR ${SPDIR}/tasks)
set(JDIR ${SPDIR}/job)
set(HDIR ${SPDIR}/hash)
set(HTDIR ${SPDIR}/htasks)
set(IDIR ${SPDIR}/install)
set(DDIR ${SPDIR}/dir)
set(RDIR ${SPDIR}/rules)
set(CDIR ${SPDIR}/cache)
set(S0DIR ${SPDIR}/sr0)
set(JDIR ${SPDIR}/job)
set(MIDIR ${SPDIR}/misc)

set(JS ${LIBDIR}/jsoncpp/src)
set(JSON ${JS}/json_reader.cpp ${JS}/json_writer.cpp ${JS}/json_value.cpp)

set(JOB ${JDIR}/thread.cpp ${JDIR}/job.cpp ${JDIR}/jobinfo.cpp)
set(MISC ${MIDIR}/comp85.cpp ${MIDIR}/jconfig.cpp ${MIDIR}/readjson.cpp)
set(UNPACK ${UDIR}/dirwriter.cpp ${UDIR}/base.cpp ${UDIR}/unpack_zip.cpp ${UDIR}/auto.cpp)
set(TASKS ${TDIR}/unpack.cpp ${TDIR}/curl.cpp ${TDIR}/download.cpp ${JOB} ${UNPACK})
set(HASH ${HDIR}/hash.cpp ${LIBDIR}/sha2/sha2.c)
set(HTASKS ${HTDIR}/hashtask.cpp ${HTDIR}/unpackhash.cpp ${HTDIR}/downloadhash.cpp ${HTDIR}/copyhash.cpp)
set(DIR ${DDIR}/directory.cpp ${DDIR}/from_fs.cpp)
set(SCACHE ${CDIR}/index.cpp)
set(RULES ${RDIR}/install_finder.cpp ${RDIR}/ruleset.cpp ${RDIR}/arcruleset.cpp ${RDIR}/rule_loader.cpp)
set(INSTALL ${IDIR}/action_installer.cpp ${IDIR}/build_actions.cpp ${IDIR}/installer.cpp)
set(SR0 ${S0DIR}/sr0.cpp)
set(SPREADLIB spreadlib/spread.cpp)

add_library(Spread ${JSON} ${JOB} ${MISC} ${UNPACK} ${TASKS} ${HASH} ${HTASKS} ${DIR} ${SCACHE} ${RULES} ${INSTALL} ${SR0} ${SPREADLIB})

set(GEN gen/listwriter.cpp gen/packlister.cpp gen/sr0_gen.cpp)

add_library(SpreadGen ${GEN})
